kubernetes/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9090
  selector:
    io.kompose.service: prometheus
status:
  loadBalancer: {}
