kubernetes/ingresses.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: "4000m"
    nginx.ingress.kubernetes.io/proxy-body-size: "4000m"
    ingress.kubernetes.io/proxy-connect-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "500"
    ingress.kubernetes.io/proxy-send-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "500"
    ingress.kubernetes.io/proxy-read-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "500"
    nginx.org/mergeable-ingress-type: master
  name: ingress-paths
  labels:
    name: ingress-paths
spec:
  rules:
    - host: api.localhost
      http:
        paths:
        - path: /
          backend:
            serviceName: api
            servicePort: 80
    - host: grafana.localhost
      http:
        paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
    - host: prometheus.localhost
      http:
        paths:
        - path: /
          backend:
            serviceName: prometheus
            servicePort: 9090
